# flare

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  recipe.yaml
benchmark/: bench_compare.mojo  bench_http.mojo  bench_huffman.mojo  bench_parse.mojo  bench_tcp.mojo  bench_ws_mask.mojo
benchmark/baselines/axum/: Cargo.toml  VERSION  check.sh  run.sh
benchmark/baselines/axum/src/: main.rs
benchmark/baselines/hyper/: Cargo.toml  VERSION  check.sh  run.sh
benchmark/baselines/hyper/src/: main.rs
docs/: README.md  architecture.md  benchmark.md  build.md  concurrency.md  cookbook.md  features.md  operational-guarantees.md  operations.md  perf-v07-progress.md  security.md  soak.md  threat-model.md  tls-strategy.md
examples/: 01_addresses.mojo  02_dns_resolution.mojo  03_error_handling.mojo  04_tcp_echo.mojo  05_http_get.mojo  06_websocket_echo.mojo  07_ergonomics.mojo  08_http_server.mojo  09_ws_server.mojo  10_encoding.mojo  11_udp.mojo  12_tls.mojo  13_cookies.mojo  14_reactor.mojo  15_router.mojo  16_state.mojo  17_multicore.mojo  18_middleware.mojo  19_extractors.mojo  20_comptime_router.mojo  21_static_response.mojo  22_cancel.mojo  23_drain.mojo  24_sse.mojo  25_cert_reload.mojo  26_mtls.mojo  27_request_cookies.mojo  28_forms.mojo  29_multipart_upload.mojo  30_sessions.mojo  31_middleware_stack.mojo  32_cors.mojo  33_static_files.mojo  34_brotli.mojo  35_http2.mojo  36_work_stealing.mojo  37_http2_config.mojo  38_uds_sidecar.mojo  39_iouring_plaintext.mojo  40_http2_client.mojo  (+1 more)
flare/: __init__.mojo  errors.mojo
fuzz/: fuzz_alpn_dispatch.mojo  (+56 more)
(+724 files in other folders)
